Fix category page jumping

--- a/wp-content/themes/neomuscle/assets/sass/base/_base.scss
+++ b/wp-content/themes/neomuscle/assets/sass/base/_base.scss
@@ -55,7 +55,3 @@ input {
   padding-top: 80px;
   padding-bottom: 80px;
 }
-
-.site-content {
-  min-height: 100%;
-}
