--- a/wp-content/themes/neomuscle/assets/sass/components/_media.scss
+++ b/wp-content/themes/neomuscle/assets/sass/components/_media.scss
@@ -246,6 +246,7 @@
       }
       &:hover {
         position: relative;
+        min-height: 334.6px;
         &::after {
           display: none;
         }
