--- a/wp-content/themes/neomuscle/assets/sass/shop/_product-card.scss
+++ b/wp-content/themes/neomuscle/assets/sass/shop/_product-card.scss
@@ -22,6 +22,7 @@
   &-categories {
     height: 25px;
     margin-bottom: 5px;
+    overflow: hidden;
     .loop {
       color: #878787;
       a {
