--- a/wp-content/themes/neomuscle/style.css
+++ b/wp-content/themes/neomuscle/style.css
@@ -442,10 +442,6 @@ input {
   padding-bottom: 80px;
 }
 
-.site-content {
-  min-height: 100%;
-}
-
 /*--------------------------------------------------------------
 # Grid
 --------------------------------------------------------------*/
@@ -4449,6 +4445,7 @@ select {
   }
   .products .product:hover {
     position: relative;
+    min-height: 334.6px;
   }
   .products .product:hover::after {
     display: none;
